SERVER-16176 Log slow checkpoints in WiredTiger